--- a/order-api/package.json
+++ b/order-api/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chai-http": "^4.3.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.1",
     "halson": "^3.0.0",
